gccida/g1/print_operand_address
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6589:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 6126, "print_operand_address"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6590:17: error: expected expression
v2 = *( _OWORD *)&scale.base; 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6590:9: error: use of undeclared identifier '_OWORD'
v2 = *( _OWORD *)&scale.base; 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6592:17: error: expected expression
if ( *( _OWORD *)&scale.base == 0LL ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6592:9: error: use of undeclared identifier '_OWORD'
if ( *( _OWORD *)&scale.base == 0LL ) 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6641:16: error: use of undeclared identifier 'off_66644D'
fprintf( file, off_66644D, v4); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6651:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v6.rtwint = ( __int64)scale.disp->fld[0]; 
                      ^~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/i386.c:6723:16: error: use of undeclared identifier 'off_666451'
fprintf( file, off_666451, v4); 
               ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_operand_address/src/obj/i386.o] Error 1
